<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Setting</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_switch">开启欢迎界面</string>
    <string name="pref_description_switch">欢迎界面用于应用加载等待</string>
    <string name="pref_title_name">用户名</string>
    <string name="pref_default_name">小明</string>
    <string name="pref_title_wait">欢迎页等待时间</string>
    <string-array name="pref_example_list_titles">
        <item>1s</item>
        <item>2s</item>
        <item>3s</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    
</resources>
