<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_switch"
        android:title="@string/pref_title_switch"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_name"/>
    
    <ListPreference
        android:defaultValue="3"
        android:dependency="example_switch"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_wait"/>

</PreferenceScreen>
